[tool.poetry]
name = "YukkuLips"
version = "0.2.5"
description = "The application to support creating chara-sozai videos."
authors = ["PickledChair <ubatamamoon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
altgraph = "0.17"
cffi = "1.14.4"
macholib = "1.14"
numpy = "1.20.1"
Pillow = "8.1.2"
pycparser = "2.20"
pyinstaller = "4.2"
pyinstaller-hooks-contrib = "2020.10"
PySoundFile = "0.9.0.post1"
six = "1.15.0"
wxPython = "4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yklapp = "YukkuLips:main"
