[tool.poetry]
name = "YukkuLips"
version = "0.2.5"
description = "The application to support creating chara-sozai videos."
authors = ["PickledChair <ubatamamoon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.20.1"
Pillow = "8.1.2"
pyinstaller = "4.2"
PySoundFile = "0.9.0.post1"
wxPython = "4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yklapp = "YukkuLips:main"
